<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/MainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/LogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="#EAEAEA"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:text="@string/log_txt"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/LogView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EAEAEA"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/View"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#EAEAEA"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:fadingEdgeLength="20dp"
                android:requiresFadingEdge="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/logs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/log_default" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/logshButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="showhLog"
                android:text="@string/hidlog_bottom_txt"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="openAbout"
                android:text="@string/about_bottom_txt"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/setText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:text="@string/set_txt"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/setView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:fadingEdgeLength="20dp"
            android:requiresFadingEdge="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_name_txt" />

                <EditText
                    android:id="@+id/inName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_group_txt" />

                <EditText
                    android:id="@+id/inGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_qq_txt" />

                <EditText
                    android:id="@+id/inQQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/SaveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="saveSet"
                    android:text="@string/save_bottom_txt"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textColorLink="#FFFFFF" />

                <Button
                    android:id="@+id/hidButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="exitToBackground"
                    android:text="@string/hid_bottom_txt"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textColorLink="#FFFFFF" />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hid_text_txt" />

                <TextView
                    android:id="@+id/hidList"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#EAEAEA"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addhidButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimary"
                        android:onClick="addHid"
                        android:text="@string/addhid_bottom_txt"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textColorLink="#FFFFFF" />

                    <Button
                        android:id="@+id/delhidButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimary"
                        android:onClick="delHid"
                        android:text="@string/delhid_bottom_txt"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textColorLink="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>